--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts --project tsconfig.json",
-    "dev": "nodemon src/index.ts & stripe listen --forward-to localhost:4000/api/stripe/webhooks",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start:dist": "node dist/src/index.js",
     "lint": "eslint --fix src test",
@@ -51,6 +51,7 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "module-alias": "^2.2.3",
+    "node-html-parser": "^6.1.13",
     "nodemon": "^3.1.0",
     "prisma": "^5.12.1",
     "supertest": "^6.3.4",
